# atlas-ai-benachir

./: .gitignore  Modelfile  README.md  pyproject.toml
atlas/: cli.py  config.py  guardrails.py  llm.py  memory.py  monitoring.py
config/: atlas.yaml
docs/: architecture.md  configuration.md  governance.md  installation.md
scripts/: analyze_traces.py
tests/: test_guardrails.py
